# ReactorSimulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md
app/: main.cpp
component/: CMakeLists.txt  Position.h  Velocity.h
component/factory/: Factory.cpp  Factory.h
component/include/component/: Decay.hpp  Lifetime.hpp  Position.h  Types.hpp  Velocity.hpp
component/include/component/bundles/: ControlRod.cpp  ControlRod.hpp  Fuel.cpp  Fuel.hpp  Particle.hpp
component/include/component/factory/: Factory.h  Factory.hpp
component/include/component/shape/: Circle.hpp  Rectangle.h  Rectangle.hpp
component/shape/: Circle.h  Rectangle.h
component/src/factory/: Factory.cpp
core/: CMakeLists.txt
core/include/core/: Color.hpp  ReactorSimulator.h  ReactorSimulator.hpp
core/src/: ReactorSimulator.cpp
ecs/: CMakeLists.txt
ecs/backend/ecs/entt/: Implementation.hpp
ecs/backend/entt/: CMakeLists.txt  EnTTEcs.hpp  EnTTEcs.tpp
ecs/include/ecs/: EcsIF.hpp  EcsImpl.h  EcsImpl.hpp  System.h  System.hpp
ecs/src/: System.cpp
html/: Collision_8cpp.html  Collision_8cpp__incl.map  Collision_8cpp__incl.md5  Collision_8hpp.html  Collision_8hpp.js  Collision_8hpp__dep__incl.map  Collision_8hpp__dep__incl.md5  Collision_8hpp__incl.map  Collision_8hpp__incl.md5  Collision_8hpp_source.html  Color_8hpp.html  Color_8hpp.js  Color_8hpp__dep__incl.map  Color_8hpp__dep__incl.md5  Color_8hpp__incl.map  Color_8hpp__incl.md5  Color_8hpp_source.html  Configuration_8hpp.html  Configuration_8hpp.js  Configuration_8hpp__dep__incl.map  Configuration_8hpp__dep__incl.md5  Configuration_8hpp__incl.map  Configuration_8hpp__incl.md5  Configuration_8hpp_source.html  Particle_8hpp.html  Particle_8hpp.js  Particle_8hpp__dep__incl.map  Particle_8hpp__dep__incl.md5  Particle_8hpp__incl.map  Particle_8hpp__incl.md5  Particle_8hpp_source.html  RaylibRender_8hpp.html  RaylibRender_8hpp.js  RaylibRender_8hpp__dep__incl.map  RaylibRender_8hpp__dep__incl.md5  RaylibRender_8hpp__incl.map  RaylibRender_8hpp__incl.md5  RaylibRender_8hpp_source.html  RaylibRenderer_8cpp.html  RaylibRenderer_8cpp__incl.map  (+198 more)
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_3.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
include/: ChernobylSimulator.hpp  ReactorSimulator.hpp
include/ecs/: EcsIF.hpp  EcsImpl.h
include/ecs/entt/: EnTTEcs.hpp  EnTTEcs.inl
include/elements/: Particle.hpp  Square.hpp
include/physics/: Collision.hpp
include/rendering/: RenderBackend.hpp  RenderIF.hpp  RendererIF.hpp
include/rendering/raylib/: RaylibRender.hpp
include/utils/: Color.hpp  Configuration.hpp  RenderBackend.hpp  Vec.hpp
modules/component/include/component/: Position.hpp  Velocity.hpp
modules/component/include/component/bundles/: Fuel.hpp  Particle.cpp  Particle.hpp
modules/component/include/component/shape/: Circle.hpp
modules/core/: CMakeLists.txt
modules/core/include/core/: Color.hpp  ReactorSimulator.hpp
modules/core/src/: ReactorSimulator.cpp
modules/ecs/: CMakeLists.txt
modules/ecs/backend/ecs/entt/: CMakeLists.txt
modules/ecs/include/ecs/: EcsIF.hpp
modules/rendering/: CMakeLists.txt
modules/rendering/backend/rendering/raylib/: Implementation.cpp
modules/rendering/include/rendering/: RenderImpl.hpp
modules/scene/include/scene/: MainMenu.hpp  Simulation.hpp
modules/utils/: CMakeLists.txt
modules/utils/include/utils/: Configuration.hpp
physics/: Collision.cpp  Collision.h
rendering/: CMakeLists.txt
rendering/backend/raylib/: CMakeLists.txt  RaylibRender.h  RaylibRenderer.cpp
rendering/backend/rendering/raylib/: CMakeLists.txt  Implementation.cpp  Implementation.hpp
rendering/backend/rendering/sfml/: CMakeLists.txt  Implementation.cpp  Implementation.hpp  SfmlRender.hpp  SfmlRenderer.cpp
rendering/backend/sfml/: CMakeLists.txt
rendering/include/rendering/: RenderIF.hpp  RenderImpl.h  RenderImpl.hpp
rendering/src/: dummy.cpp
scene/: CMakeLists.txt
scene/include/scene/: MainMenu.h  SceneIF.h  SceneIF.hpp  Simulation.h
scene/src/: MainMenu.cpp  Simulation.cpp
src/: ChernobylSimulator.cpp  ReactorSimulator.cpp  main.cpp
src/components/: EntityManager.cpp
src/ecs/entt/: CMakeLists.txt
src/physics/: CMakeLists.txt  Collision.cpp
src/rendering/raylib/: CMakeLists.txt  RaylibRenderer.cpp
utils/: CMakeLists.txt  Configuration.cpp
utils/include/utils/: Configuration.hpp  InputData.hpp
